--- a/src/app/check-ups/check-up-modal/check-up-modal.component.html
+++ b/src/app/check-ups/check-up-modal/check-up-modal.component.html
@@ -70,7 +70,7 @@
         </ng-container>
       </tbody>
     </table>
-
+    <div *ngIf="valCheck" class="text-red-500">Debes calificar todos los recursos, de lo contrario, no se guardará la información</div>
   </div>
 
 
