--- a/src/app/inventory/check-ups-history/check-ups-history.component.html
+++ b/src/app/inventory/check-ups-history/check-ups-history.component.html
@@ -1,8 +1,8 @@
 <app-back-arrow (onBack)="onBack()"></app-back-arrow>
 
 <div class="flex flex-col items-center justify-center w-full space-y-4 pb-12">
-
-  <table *ngIf="resource && resource.documents?.length"
+<!--*ngIf="resource && resource.documents?.length" -->
+  <table 
     class="hidden w-full text-xs text-center table-auto sm:table sm:text-lg">
     <thead>
       <tr>
