--- a/src/app/approvals/approvals-history-repair/approvals-history-repair.component.html
+++ b/src/app/approvals/approvals-history-repair/approvals-history-repair.component.html
@@ -139,7 +139,7 @@
                   </svg>
                 </button>
               </td>
-              <td class="p-2"></td>
+              <td class="p-2">{{checkOut.assignedUser?.email }}</td>
               <td class="p-2"> {{checkOut.resource?.reference}} </td>
               <!-- Estado -->
               <td class="p-2">
