--- a/src/app/approvals/approvals-history/approvals-history.component.html
+++ b/src/app/approvals/approvals-history/approvals-history.component.html
@@ -161,7 +161,7 @@
                   </svg>
                 </button>
               </td>
-              <td class="p-2"></td>
+              <td class="p-2">{{checkOut.assignedUser?.email }}</td>
               <td class="p-2">{{ checkOut.resource?.reference }}</td>
               <!-- Estado -->
               <td class="p-2">
