--- a/src/app/approvals/approvals-pending/approvals-pending.component.html
+++ b/src/app/approvals/approvals-pending/approvals-pending.component.html
@@ -181,7 +181,7 @@
                   </svg>
                 </button>
               </td>
-              <td class="p-2"></td>
+              <td class="p-2">{{resource.checkups[0].assignedUser?.email }}</td>
               <td class="p-2">{{ resource.reference }}</td>
               <!-- Estado -->
               <td class="p-2">
