--- a/src/app/check-ups/check-ups-history/check-ups-history.component.html
+++ b/src/app/check-ups/check-ups-history/check-ups-history.component.html
@@ -153,7 +153,7 @@
                   </svg>
                 </button>
               </td>
-              <td class="p-2"></td>
+              <td class="p-2">{{checkup.assignedUser?.email }}</td>
               <td class="p-2">{{ checkup.resource?.reference }}</td>
               <td class="p-2">
                 {{
