--- a/src/app/check-ups/check-ups-pending/check-ups-pending.component.html
+++ b/src/app/check-ups/check-ups-pending/check-ups-pending.component.html
@@ -172,7 +172,7 @@
                   </svg>
                 </button>
               </td>
-              <td class="p-2"></td>
+              <td class="p-2">{{resource.checkups[0].assignedUser?.email }}</td>
               <td class="p-2">{{ resource.reference }}</td>
               <td class="p-2">
                 {{
