--- a/src/app/clients/user-form/user-form.component.html
+++ b/src/app/clients/user-form/user-form.component.html
@@ -75,7 +75,7 @@
           class="flex flex-col items-center justify-center w-full sm:space-x-8 sm:flex-row"
         >
           <!-- CEDULA -->
-          <div class="flex flex-col w-full h-16">
+          <!-- <div class="flex flex-col w-full h-16">
             <label class="text-gray-400" for="cedula">* Cédula:</label>
             <input
               name="documentNumber"
@@ -89,7 +89,7 @@
               }"
               type="text"
             />
-          </div>
+          </div> -->
           <!-- email -->
           <div class="flex flex-col w-full h-16">
             <label class="text-gray-400" for="email">
@@ -299,7 +299,7 @@
           class="flex flex-col items-center justify-center w-full sm:space-x-8 sm:flex-row"
         >
           <!-- SEXO -->
-          <div class="flex flex-col w-full h-16">
+          <!-- <div class="flex flex-col w-full h-16">
             <label class="text-gray-400" for="sexo">* Sexo:</label>
             <select
               formControlName="sexo"
@@ -311,7 +311,7 @@
               <option [ngValue]="'male'">Masculino</option>
               <option [ngValue]="'fename'">Femenino</option>
             </select>
-          </div>
+          </div> -->
         </div>
 
         <!-- Buttons -->
