--- a/src/app/inventory/inventory/inventory.component.html
+++ b/src/app/inventory/inventory/inventory.component.html
@@ -80,6 +80,35 @@
           </svg>
         </button>
       </div>
+      
+      <!-- recursos masivos-->
+      <div class="flex flex-row justify-start">
+        <!-- Add new resource button -->
+        <button
+      *ngIf="showAddBtn"
+      class="btn-primary hover:bg-green-900 mx-5"
+      [disabled]="downloading"
+      [ngClass]="{ 'opacity-40 cursor-wait': downloading }"
+      (click)="openDomainListModal()"
+    >
+      <span class="hidden sm:flex">Carga masiva usuarios</span>
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        class="h-6 w-6"
+        fill="none"
+        viewBox="0 0 24 24"
+        stroke="currentColor"
+      >
+        <path
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          stroke-width="2"
+          d="M4 16v1a3 3 0 003 3h10a3 3 0 003-3v-1m-4-8l-4-4m0 0L8 8m4-4v12"
+        />
+      </svg>
+    </button>
+      
+      </div>
     </div>
     <!-- End Add Client Btn -->
 
