--- a/src/app/maintenance/maintenance-pending/maintenance-pending.component.html
+++ b/src/app/maintenance/maintenance-pending/maintenance-pending.component.html
@@ -180,7 +180,7 @@
                   </svg>
                 </button>
               </td>
-              <td class="p-2"></td>
+              <td class="p-2">{{resource.checkups[0].assignedUser?.email }}</td>
               <td class="p-2">{{ resource.reference }}</td>
               <!-- Estado -->
               <td class="p-2">
