--- a/src/app/resources/resources/resources.component.html
+++ b/src/app/resources/resources/resources.component.html
@@ -43,7 +43,7 @@
         />
       </svg>
     </button>
-    <button
+    <!-- <button
       *ngIf="showAddBtn"
       class="btn-primary hover:bg-green-900 mx-5"
       [disabled]="downloading"
@@ -65,7 +65,7 @@
           d="M4 16v1a3 3 0 003 3h10a3 3 0 003-3v-1m-4-8l-4-4m0 0L8 8m4-4v12"
         />
       </svg>
-    </button>
+    </button> -->
   </div>
     <!-- End Add Client Btn -->
   </div>
