[EXPORTAR EXCEL RESERVAS]

--- a/src/app/clients/user-list/user-list.component.html
+++ b/src/app/clients/user-list/user-list.component.html
@@ -197,7 +197,7 @@
                 </select>
 
                 <label class="text-gray-400 mx-3" for="documentNumber">
-                  Cédula:
+                  Correo:
                 </label>
                 <input
                   name="documentNumber"
